Update home page and images

--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,7 @@ github_username:  watchep
 theme: minima
 plugins:
   - jekyll-feed
+show_excerpts: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
