Add news item about 2023 summer school

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Western Advanced Training for Computational High-Energy Physics
 email: watchep@ucsc.edu
 description: >- # this means to ignore newlines until "baseurl:"
-   Graduate training in advanced topics to facilitate ground-breaking projects 
+   Graduate training in advanced computational topics to facilitate ground-breaking projects 
    in high-energy physics.
    The WATCHEP program is sponsored by the U.S. Department of Energy, Office of Science,
    Office of High-Energy Physics under Award Number DE-SC-0023527.
